--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
+    "winston": "^3.15.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
