initial imlementation added

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 MONGO_DB_URI="mongodb://localhost:27017"
+FRONTEND_URI="http://localhost:8081"
 NODE_ENV="development"
 PORT=5000 
 JWT="the-secret-mavarick"
